target hard input set display, flex direction, justify content and width, thene target select and input stting widtth

--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -64,6 +64,18 @@
 
     .hard_charge_input {
       display: flex;
+
+      .hard_input {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+
+        select, input {
+          width: 80%;
+        }
+
+      }
     }
   }
 }
