--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -56,16 +56,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 80%;
 
     .single_hard_charge_container {
-      border: 1px solid black;
-      padding: 5%;
-      margin: 2%;
+      padding: 3%;
     }
 
     h3 {
       margin-bottom: 5px;
+      text-decoration: underline;
     }
 
     .hard_charge_input {
