change hard_charge_container to be award container, adn change single harrd_charge container to be single award

--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -52,12 +52,12 @@
     }
   }
 
-  .hard_charge_container {
+  .award_container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 
-    .single_hard_charge_container {
+    .single_award {
       padding: 3%;
     }
 
